tests/grammar/schema/type/type_fail_5/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:11:9
   |
11 |         "firstName": {"key": "Alice"},
   |         ^ expected str, got {str(key):str(Alice)}
   |
 --> ${CWD}/main.k:2:5
  |
2 |     firstName: str
  |     ^ variable is defined here, its type is str, but got {str(key):str(Alice)}
  |